--- a/partials/footer.tpl.html
+++ b/partials/footer.tpl.html
@@ -1,13 +1,13 @@
 	@@include("../partials/modals.tpl.html")  
 
-
+<!-- 
 	<section class="footer" id="footer">
 		<div class="anchor--links">
 			<a href="#portfolio" class="btn--link">Portfolio</a>
 			<a href="#about" class="btn--link">About</a>
 			<a href="#contact" class="btn--link">Contact</a>
 		</div>
-	</section>
+	</section> -->
 
 	</div><!-- #app -->
 
