--- a/partials/header.tpl.html
+++ b/partials/header.tpl.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Fifty Boilerplate Static</title>
+  <title>Kristina Vanderslice Portfolio</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,12 +22,27 @@
   <script src="../components/prefix-free/prefixfree.min.js"></script>
   
   <!-- Typekit -->
-  <link rel="stylesheet" href="https://use.typekit.net/pzv0cne.css">
+<!--   <link rel="stylesheet" href="https://use.typekit.net/pzv0cne.css"> -->
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
+
 
 
 </head>
 <body class="@@body_class">
   
 	<div id="app" class="@@app_class"> 
+
+    <div class="toggle--wrapper">
+      <button type="button" role="button" aria-label="Toggle Navigation" class="menu--toggle" href="#"><span></span></button>
+    </div>
+
+    <header class="header" id="header">
+      <h1 class="large">Menu</h1>
+      <ul class="menu">
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portofolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </header>
 
  
